@@ -2074,6 +2074,52 @@ function fm_secure ($orig_string) {
   return $this_string;    // return cleansed string
 } // end function fm_secure
 
+function fm_get_active_payerids ($ptid=0)
+{
+        global $database, $sql, $cur_date;
+        $result = 0;
+	if ($ptid == 0)
+           return $result;
+        $query = "SELECT id FROM payer WHERE ";
+        $query .= "payerpatient='$ptid' AND payerstatus='0' ";
+        $query .= "AND payerstartdt<='$cur_date' AND payerenddt>='$cur_date'";
+        $result = $sql->query($query);
+        if (!$result)
+           return $result;  // not an array!
+        $sub=0;
+        while ($rec = $sql->fetch_array($result))
+        {
+            $ins_id[$sub] = $rec["id"];
+            $sub++;
+        }
+        return $ins_id;
+
+
+} // end get_active_payerids
+
+function fm_get_active_guarids ($ptid=0)
+{
+        global $database, $sql, $cur_date;
+        $result = 0;
+	if ($ptid == 0)
+           return $result;
+        $query = "SELECT id FROM guarantors WHERE ";
+        $query .= "guarpatient='$ptid' AND guarrstatus='0' ";
+        $query .= "AND guarstartdt<='$cur_date' AND guarenddt>='$cur_date'";
+        $result = $sql->query($query);
+        if (!$result)
+           return $result;  // not an array!
+        $sub=0;
+        while ($rec = $sql->fetch_array($result))
+        {
+            $guar_id[$sub] = $rec["id"];
+            $sub++;
+        }
+        return $guar_id;
+
+
+} // end get_active_payerids
+
 } // end checking for __API_PHP__
 
 ?>
