@@ -1,6 +1,14 @@
 freemed project changelog
 ($Id$)
 
+* Tue Jan 09 2001 fforest
+   - containers for patient have been updated to support the new guarantor/payer tables.
+   - other files changed to get inscos and payers using the new fields in patient class.
+   - Link to payment records added to manage_payments screen to display ledger transactions
+     for the selected procedurei only.
+   - new functions added to API for getting the payers and guars. used by patient class.
+
+
 * Mon Jan 01 2001 rufustfirefly
   - moved facility.php3 -> modules/facility.module.php
   - moved patient_record_template.php3 ->
